[gd_scene load_steps=9 format=3 uid="uid://c86vj4ktsuc3t"]

[ext_resource type="Script" uid="uid://b1e4nqru5hvix" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://dt3rfqosi6tr8" path="res://assets/pawns/car.png" id="2_smehm"]
[ext_resource type="Texture2D" uid="uid://dibgd1nbdr5yf" path="res://assets/icons/coin.png" id="3_ur7pv"]
[ext_resource type="Texture2D" uid="uid://s5rku17e0ktl" path="res://assets/icons/card.png" id="4_y4r1p"]
[ext_resource type="Texture2D" uid="uid://cadiw16y682xl" path="res://assets/icons/tile.png" id="5_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dys1i4s040mct" path="res://assets/icons/skip_turn.png" id="6_3v2ag"]
[ext_resource type="Texture2D" uid="uid://co0g2psoav64u" path="res://assets/icons/trap_canceller.png" id="7_jej6c"]
[ext_resource type="Texture2D" uid="uid://dpgidpha3dsg8" path="res://assets/icons/treasure_booster.png" id="8_f1ej7"]

[node name="Player" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3vyb7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 100.0
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 0.878431)

[node name="Pawn" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = -1.0
offset_right = 77.0
offset_bottom = 34.0
texture = ExtResource("2_smehm")
expand_mode = 2
stretch_mode = 4

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 5.0
offset_right = 149.0
offset_bottom = 28.0
text = "Player %d"

[node name="CoinIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 31.0
offset_right = 66.0
offset_bottom = 63.0
texture = ExtResource("3_ur7pv")
expand_mode = 2
stretch_mode = 4

[node name="Coins" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 35.0
offset_right = 39.0
offset_bottom = 58.0
text = "%d"

[node name="CardIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 107.0
offset_top = 36.0
offset_right = 118.0
offset_bottom = 56.0
texture = ExtResource("4_y4r1p")
expand_mode = 4
stretch_mode = 4

[node name="Cards" type="Label" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 35.0
offset_right = 106.0
offset_bottom = 58.0
text = "%d"

[node name="TileIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 35.0
offset_right = 182.0
offset_bottom = 55.0
texture = ExtResource("5_d2wvv")
expand_mode = 2
stretch_mode = 4

[node name="Tiles" type="Label" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 34.0
offset_right = 161.0
offset_bottom = 57.0
text = "%d"

[node name="SkipTurn" type="TextureRect" parent="."]
modulate = Color(0.333333, 0.333333, 0.333333, 0.333333)
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 100.0
texture = ExtResource("6_3v2ag")
expand_mode = 2
stretch_mode = 4

[node name="TrapCanceller" type="TextureRect" parent="."]
modulate = Color(0.25098, 0.25098, 0.25098, 0.25098)
layout_mode = 0
offset_left = 80.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 100.0
texture = ExtResource("7_jej6c")
expand_mode = 2
stretch_mode = 4

[node name="TreasureBooster" type="TextureRect" parent="."]
modulate = Color(0.333333, 0.333333, 0.333333, 0.333333)
layout_mode = 0
offset_left = 140.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 100.0
texture = ExtResource("8_f1ej7")
expand_mode = 2
stretch_mode = 4
